# GlacierFormats-rs

./: .gitignore  Cargo.toml  README.md
glacier-geometry/: Cargo.toml
glacier-geometry/examples/: bone_research.rs  cloth.rs  rebuilding.rs  test.rs
glacier-geometry/src/: buffer.rs  lib.rs  render_primitive.rs  rpkg.rs
glacier-geometry/src/cloth/: cloth.rs  mod.rs
glacier-geometry/src/collision/: collision.rs
glacier-geometry/src/mesh/: mod.rs  prim_sub_mesh.rs
glacier-geometry/src/model/: mod.rs  prim_mesh.rs  prim_mesh_linked.rs  prim_mesh_weighted.rs  prim_object.rs
glacier-geometry/src/rig/: bone_rig.rs  mod.rs
glacier-geometry/src/utils/: buffer.rs  io.rs  math.rs  mod.rs
glacier-ini/: Cargo.toml
glacier-ini/src/: ini_file.rs  lib.rs  utils.rs
glacier-ini/src/encryption/: xtea.rs
glacier-physics/: .gitignore  Cargo.toml
glacier-physics/src/: collision.rs  lib.rs
glacier-texture/: Cargo.toml
glacier-texture/examples/: cli-tool.rs  generation.rs  image-feature.rs  rpkg_generation.rs  test.rs  texture_porting.rs
glacier-texture/src/: atlas.rs  convert.rs  enums.rs  image.rs  lib.rs  mipblock.rs  pack.rs  rpkg.rs  texture_map.rs
glacier-texture/tests/: reading_tests.rs  writing_tests.rs
prim-rs/: Cargo.toml
prim-rs/src/: buffer.rs  cloth.rs  collision.rs  lib.rs  math.rs  prim_mesh.rs  prim_mesh_weighted.rs  prim_object.rs  prim_sub_mesh.rs  render_primitive.rs  rpkg.rs
tex-rs/: Cargo.toml
tex-rs/examples/: cli-tool.rs  generation.rs  rpkg_generation.rs  test.rs  texture_porting.rs
tex-rs/src/: atlas.rs  convert.rs  enums.rs  lib.rs  mipblock.rs  pack.rs  rpkg.rs  texture_map.rs
tex-rs/tests/: reading_tests.rs  writing_tests.rs
