[package]
name = "glacier-geometry"
version = "0.1.1"
edition = "2021"

[dependencies]
binrw = "0.14.0"
itertools = "0.13.0"
bitfield-struct = "0.9.3"
num-traits = "0.2.19"
obj = "0.10.2"
bincode = "2.0.0-rc.3"
byte-slice-cast = { version = "1.2.2"}
wide = { version = "0.7.30"}
rpkg-rs = { version = "1.1.2", optional = true }
bit-set = "0.8.0"

[features]
default = ["rpkg"]
rpkg = ["dep:rpkg-rs"]

