[package]
name = "glacier-physics"
version = "0.1.1"
edition = "2021"

[dependencies]
binrw = "0.14.0"
bitfield-struct = "0.9.3"
rpkg-rs = { version = "1.2.0", optional = true }
physx34-sys = { git= "https://github.com/dafitius/physx34-sys" }

[dev-dependencies]
obj = "0.10.2"
nalgebra = "0.33.2"

[features]
default = ["rpkg"]
rpkg = ["dep:rpkg-rs"]

