[package]
name = "glacier-texture"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
categories = ["game-development", "data-structures", "parser-implementations"]
keywords = ["texture", "hitman", "glacier", "modding", "DirectX"]
description = "Read and write Glacier Texture files"
repository = "https://github.com/dafitius/glacierformats-rs"

[badges.maintenance]
status = "actively-developed"

[dependencies]
directxtex = "1.3.0"
binrw = "0.15.0"
bitfield-struct = "0.11.0"
lz4 = "1.28.1"
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["serde_derive"]}
rpkg-rs = { version = "1.3.1", features = ["path-list"], optional = true }
png = "0.17.16"
image = { version = "0.25.6" , optional = true}

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.143"
anyhow = "1.0.99"
rayon = "1.11.0"

[features]
default = ["rpkg", "image"]
rpkg = ["dep:rpkg-rs"]
image = ["dep:image"]
unstable = []