[package]
name = "tex-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
directxtex = "1.0.0"
binrw = "0.14.0"
bitfield-struct = "0.7.0"
lz4 = "1.24.0"
thiserror = "1.0.57"
clap = { version = "4.5.3", features = ["derive"] }
rpkg-rs = { version = "1.0.0-rc.1", optional = true }

[dev-dependencies]
clap = "4.5.3"
walkdir = "2.5.0"

[features]
default = ["rpkg"]
rpkg = ["dep:rpkg-rs"]