[package]
name = "tex-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
directxtex = "1.0.0"
binrw = "0.14.0"
bitfield-struct = "0.8.0"
lz4 = "1.26.0"
thiserror = "1.0.63"
serde = { version = "1.0.210", features = ["serde_derive"]}

rpkg-rs = { version = "1.1.0", optional = true }

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.128"

[features]
default = ["rpkg"]
rpkg = ["dep:rpkg-rs"]